pkl-core/src/test/files/LanguageSnippetTests/input/errors/constraintDetails3.pkl
// typechecks within child frames should also be eagerly checked
foo: Listing(toList().every((it: Listing<Bird>) -> it[0].name == "Bob")) = new {
  new Listing {
    new Bird {
      name = "Sandy"
    }
  }
}

class Bird { name: String }
